chore: misc build refactorings